force-app/main/default/objects/Wallet_Service_Log__c/Wallet_Service_Log__c.object-meta.xml
<CustomObject>
    <label>Wallet Service Log</label>
    <nameField>
        <displayFormat>WSL-{000000000}</displayFormat>
        <label>Wallet Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wallet Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>