force-app/main/default/objects/Wallet_Service_Log__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to loyalty Member object to associate logs</description>
    <label>Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Wallet Service Logs</relationshipLabel>
    <relationshipName>Wallet_Service_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>