force-app/main/default/objects/Wallet_Service_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message containing log details</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>